# DATACOM

./: .gitignore  Cargo.toml  README.md  create_listener_thread_success.toml
.github/workflows/: ci.yaml
cargo/: config.toml
data/: ports.toml
data/object_loading/: blizzard_initialize.json  blizzard_initialize_full.json  propellor_initialize.json
data/scene_loading/: test_scene.json  test_scene_2.json
data/test_commands/: test_command.json
src/: behaviors_and_entities.rs  camera.rs  com.rs  dc.rs  gp.rs  isoviewer.rs  lib.rs  main.rs  model.rs  plt.rs  resources.rs  s.txt  scene.rs  scene_composer.rs  scenes_and_entities.rs  state.rs  text.rs  wf.rs
src/garbage/: isoviewer.rs  plt.rs  wf.rs
src/shaders/: fragment_shader.glsl  shader.wgsl  terrain_shader.wgsl  text_fragment_shader.glsl  text_shader.wgsl  text_vertex_shader.glsl  vertex_shader.glsl
