[package]
name = "DATACOM"
version = "0.1.0"
edition = "2021"

[dependencies]
tobj = { version = "3.2", default-features = false, features = ["async"]}
glium = "0.36.0"
nalgebra = "0.31.0"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
log = "0.4"
num-traits = "0.2"
serde_json = "1.0.117"
rusttype = "0.9.3"
image = "0.25"
glutin = "0.32.0"
toml = "0.8.22"
serde = "1.0.219"
serde_derive = "1.0.219"
wgpu = "25.0.0"
winit = "0.29"
bytemuck = { version = "1.16", features = ["derive"]}
cgmath = "0.18.0"
